--- a/list-sliding-button/list-sliding-button.html
+++ b/list-sliding-button/list-sliding-button.html
@@ -1,4 +1,4 @@
 <ion-item-option [attr.data-color]="optionColor">
   <ion-icon *ngIf="icon.trim().length > 0" name="{{ icon.trim() }}" icon-only></ion-icon>
-  <ion-text class="ion-text-uppercase">{{ label }}</ion-text>
+  <ion-text class="ion-text-uppercase"><ng-content></ng-content></ion-text>
 </ion-item-option>
